package ar.edu.unahur.obj2.ejercicio3;

public abstract class Node {
}
