package ar.edu.unahur.obj2.ejercicio3;

public class StringNode  extends Node {

    private String text;

    public StringNode(String text) {
        this.text = text;
    }

    public String getText() {
        return text;
    }
}
